--- a/styles.css
+++ b/styles.css
@@ -1,75 +1,3 @@
-/* CSS code to set a border for the image */
-img {
-    border: 6px solid rgb(55, 39, 92); /* You can change "black" to your desired border color */
-    border: 1px solid white;
-    border-radius: 50%;
-}
-  h1 ,h2{
-    color: green
-  }
-body{
-  background-color: #16181C;
-  color: white
-}
-.dim{
-  color:#72767a;
-  border: 1px solid rgb(124, 60, 60);
-  padding: 1rem;
-  margin: 1rem;
-  border-radius: 1rem;
-  
-}
-.underline{
-    text-decoration: underline;
-}
-
-/* Apply basic styling to the table */
-table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-bottom: 20px;
-    background-color: #16181C; /* Set the background color */
-    color: #ffffff; /* Set the text color to white or an appropriate contrast color */
-  }
-  
-  /* Style table headers */
-  th {
-    background-color: #2b2d2f; /* Adjust the header background color */
-    text-align: left;
-    padding: 10px;
-  }
-  
-  /* Style table rows */
-  tr:nth-child(even) {
-    background-color: #2b2d2f; /* Adjust the even row background color */
-  }
-  
-  tr:nth-child(odd) {
-    background-color: #1f2123; /* Adjust the odd row background color */
-  }
-  
-  /* Style table cells */
-  td {
-    padding: 10px;
-    border: 1px solid #333; /* Adjust the cell border color */
-  }
-  
-  /* Add hover effect to rows */
-  tr:hover {
-    background-color: #333; /* Adjust the hover background color */
-  }
-  
-  .border{
-  border: 1px solid rgb(138, 30, 30);
-  padding: 1rem;
-  margin: 1rem;
-  border-radius: 1rem;
-}
-
-.underline{
-    background-color:rgb(218, 250, 37)
-}
-
-.color{
-    background-color: :aqua;
+.logo{
+  width: 70;
 }
